<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/alien_icon" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimaryDark" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:padding="8dp"
            android:text="@string/about_description"
            android:textColor="?attr/colorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearCacheAction"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textColor="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/clear_cache" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="2dp"
            android:text="@string/provided_api"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Email: sasha.sirelon@gmail.com" />

        <TextView
            android:id="@+id/about_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Version: 1.2.2" />

        <Button
            android:id="@+id/about_rate_action"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/action_rate" />

        <TextView
            android:id="@+id/about_rights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_rights_reserved_fmt"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>

</ScrollView>